--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
+	<div  data- ns- attribute="block- inline- button">
 	   <button  data- ns- attribute="block- inline- button">Test1</button>   
 	<button data- ns- attribute="block- inline- button">Test2</button>    
 	Answer: Inline </div>
