--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div  data- ns- attribute="block- inline- button">
-	   <button  data- ns- attribute="block- inline- button">Test1</button>   
-	<button data- ns- attribute="block- inline- button">Test2</button>    
+	<div>
+	   <button  data- ns- attribute="block-inline-button">Test1</button>   
+	<button data- ns- attribute="block-inline-button">Test2</button>    
 	Answer: Inline </div>
 	<div>
   <div  data-ns-test="block-inline-div">Test1</div>
